# grpcobsr

./: .clang-format  .gitignore  CMakeLists.txt  README.md
example/: stockclient.cpp  stockserver.cpp
include/obsr/: event.hpp  readreactor.hpp  stockrepo.hpp  writereactor.hpp
proto/: stockprice.proto
src/: event.cpp  readreactor.cpp  stockrepo.cpp  writereactor.cpp
test/: event_test.cpp  main.cpp  stock_test.cpp
